# hello-rust-raytracer

./: Cargo.toml  image.ppm  readme.md
src/: main.rs  ray.rs  vec3.rs
src/core/: camera.rs  hitable.rs  material.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
